--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home":"https://ShrutiChouhan123.github.io/Shopping_Web",
+  "homepage":"https://ShrutiChouhan123.github.io/Shopping_Web",
   "name": "mywebsite",
   "version": "0.1.0",
   "private": true,
